# seek-and-hide

./: .gitignore  pyproject.toml
seek_and_hide/: __init__.py  notify.py  process_hider.py  user_seeker.py
tests/: test_seek_and_hide.py
