[tool.poetry]
name = "seek-and-hide"
version = "0.1.0"
description = ""
authors = ["genzj <zj0512@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
utmp = "^21.10.0"
inotify-simple = "^1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
